[gd_scene load_steps=12 format=3 uid="uid://c4hm1g85durbr"]

[ext_resource type="Script" path="res://Player/Player.gd" id="1_ynasf"]
[ext_resource type="Texture2D" uid="uid://ox5174pwio7w" path="res://assets/Mom.png" id="2_ofyms"]
[ext_resource type="Texture2D" uid="uid://ji46aux5wy2e" path="res://assets/HealPeriodicallyAnimation.png" id="3_381yb"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_okdm2"]
height = 274.0

[sub_resource type="Animation" id="Animation_dsqn7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(183, 219)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HealPeriodicallySprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HealPeriodicallySprite:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_l2hnj"]
resource_name = "to_trapdoor"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(183, 219), Vector2(120, 219)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_p7y2c"]
resource_name = "interior_to_trapdoor"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(64, 292), Vector2(64, 219)]
}

[sub_resource type="Animation" id="Animation_u3is4"]
resource_name = "trapdoor_to_combat"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(120, 219), Vector2(183, 219)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [2, 3]
}

[sub_resource type="Animation" id="Animation_w7pcf"]
resource_name = "trapdoor_to_interior"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(64, 219), Vector2(64, 292)]
}

[sub_resource type="Animation" id="Animation_4n8hc"]
resource_name = "heal_periodically"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HealPeriodicallySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HealPeriodicallySprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wydrd"]
_data = {
"RESET": SubResource("Animation_dsqn7"),
"combat_to_trapdoor": SubResource("Animation_l2hnj"),
"heal_periodically": SubResource("Animation_4n8hc"),
"interior_to_trapdoor": SubResource("Animation_p7y2c"),
"trapdoor_to_combat": SubResource("Animation_u3is4"),
"trapdoor_to_interior": SubResource("Animation_w7pcf")
}

[node name="Player" type="Node2D"]
position = Vector2(183, 219)
script = ExtResource("1_ynasf")

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("2_ofyms")
hframes = 2
vframes = 2
frame = 2

[node name="Hurtbox" type="Area2D" parent="."]
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0, 3)
shape = SubResource("CapsuleShape2D_okdm2")

[node name="ProjectilePos" type="Marker2D" parent="."]
position = Vector2(16, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_wydrd")
}

[node name="freeze_enemy_timer" type="Timer" parent="."]
wait_time = 0.1

[node name="damage_enemy_timer" type="Timer" parent="."]
wait_time = 0.1

[node name="reload_timer" type="Timer" parent="."]
one_shot = true

[node name="heal_timer" type="Timer" parent="."]

[node name="HealPeriodicallySprite" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("3_381yb")
hframes = 7

[connection signal="body_entered" from="Hurtbox" to="." method="_on_hitbox_body_entered"]
[connection signal="timeout" from="freeze_enemy_timer" to="." method="_on_freeze_enemy_timer_timeout"]
[connection signal="timeout" from="damage_enemy_timer" to="." method="_on_damage_enemy_timer_timeout"]
[connection signal="timeout" from="reload_timer" to="." method="_on_reload_timer_timeout"]
[connection signal="timeout" from="heal_timer" to="." method="_on_heal_timer_timeout"]
